# base-go-gin-training/app/rest/publisher.go
@@ -3,8 +3,11 @@ package rest
 import (
 	"base-gin/app/domain/dto"
 	"base-gin/app/service"
+	"base-gin/exception"
 	"base-gin/server"
+	"errors"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -21,6 +24,10 @@ func newPublisherHandler(hr *server.Handler, publisherService *service.Publisher
 func (h *PublisherHandle) Route(app *gin.Engine) {
 	grp := app.Group("/v1/publishers")
 	grp.POST("", h.hr.AuthAccess(), h.Create)
+	grp.GET("", h.getList)
+	grp.GET("/:id", h.getByID)
+	grp.PUT("/:id", h.hr.AuthAccess(), h.update)
+	grp.DELETE("/:id", h.hr.AuthAccess(), h.delete)
 }
 
 // create godoc
@@ -54,5 +61,171 @@ func (h *PublisherHandle) Create(c *gin.Context) {
 		Success: true,
 		Message: "Data penerbit berhasil disimpan",
 		Data:    data,
+	})
+}
+
+// getList godoc
+//
+//	@Summary Get a list of Publisher
+//	@Description Get a list of Publisher.
+//	@Produce json
+//	@Param q query string false "Publisher's name"
+//	@Param s query int false "Data offset"
+//	@Param l query int false "Data limit"
+//	@Success 200 {object} dto.SuccessResponse[[]dto.PublisherCreateResp]
+//	@Failure 400 {object} dto.ErrorResponse
+//	@Failure 404 {object} dto.ErrorResponse
+//	@Failure 422 {object} dto.ErrorResponse
+//	@Failure 500 {object} dto.ErrorResponse
+//	@Router /Publisher [get]
+func (h *PublisherHandle) getList(c *gin.Context) {
+	var req dto.Filter
+	if err := c.ShouldBindQuery(&req); err != nil {
+		c.JSON(h.hr.BindingError(err))
+		return
+	}
+
+	data, err := h.service.GetList(&req)
+	if err != nil {
+		switch {
+		case errors.Is(err, exception.ErrUserNotFound):
+			c.JSON(http.StatusNotFound, h.hr.ErrorResponse(exception.ErrDataNotFound.Error()))
+		default:
+			h.hr.ErrorInternalServer(c, err)
+		}
+
+		return
+	}
+
+	c.JSON(http.StatusOK, dto.SuccessResponse[[]dto.PublisherCreateResp]{
+		Success: true,
+		Message: "Daftar publisher",
+		Data:    data,
+	})
+}
+
+// getByID godoc
+//
+//	@Summary Get a Publisher's detail
+//	@Description Get a Publisher's detail.
+//	@Produce json
+//	@Param id path int true "Publisher's ID"
+//	@Success 200 {object} dto.SuccessResponse[dto.PublisherCreateResp]
+//	@Failure 400 {object} dto.ErrorResponse
+//	@Failure 404 {object} dto.ErrorResponse
+//	@Failure 500 {object} dto.ErrorResponse
+//	@Router /Publisher/{id} [get]
+func (h *PublisherHandle) getByID(c *gin.Context) {
+	idStr := c.Param("id")
+
+	id, err := strconv.ParseUint(idStr, 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, h.hr.ErrorResponse("ID tidak valid"))
+		return
+	}
+
+	data, err := h.service.GetByID(uint(id))
+	if err != nil {
+		switch {
+		case errors.Is(err, exception.ErrUserNotFound):
+			c.JSON(http.StatusNotFound, h.hr.ErrorResponse(exception.ErrDataNotFound.Error()))
+		default:
+			h.hr.ErrorInternalServer(c, err)
+		}
+
+		return
+	}
+
+	c.JSON(http.StatusOK, dto.SuccessResponse[dto.PublisherCreateResp]{
+		Success: true,
+		Message: "Detail anggota",
+		Data:    data,
+	})
+}
+
+// update godoc
+//
+//	@Summary Update a Publisher's detail
+//	@Description Update a Publisher's detail.
+//	@Accept json
+//	@Produce json
+//	@Security BearerAuth
+//	@Param id path int true "Publisher's ID"
+//	@Param detail body dto.PublisherUpdateReq true "Publisher's detail"
+//	@Success 200 {object} dto.SuccessResponse[any]
+//	@Failure 400 {object} dto.ErrorResponse
+//	@Failure 401 {object} dto.ErrorResponse
+//	@Failure 403 {object} dto.ErrorResponse
+//	@Failure 404 {object} dto.ErrorResponse
+//	@Failure 500 {object} dto.ErrorResponse
+//	@Router /Publisher/{id} [put]
+func (h *PublisherHandle) update(c *gin.Context) {
+	idStr := c.Param("id")
+
+	id, err := strconv.ParseUint(idStr, 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, h.hr.ErrorResponse("ID tidak valid"))
+		return
+	}
+
+	var req dto.PublisherUpdateReq
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(h.hr.BindingError(err))
+		return
+	}
+	req.ID = int(id)
+
+	err = h.service.Update(&req)
+	if err != nil {
+		switch {
+		case errors.Is(err, exception.ErrDateParsing):
+			c.JSON(http.StatusBadRequest, h.hr.ErrorResponse(err.Error()))
+		case errors.Is(err, exception.ErrUserNotFound):
+			c.JSON(http.StatusNotFound, h.hr.ErrorResponse(err.Error()))
+		default:
+			h.hr.ErrorInternalServer(c, err)
+		}
+
+		return
+	}
+
+	c.JSON(http.StatusOK, dto.SuccessResponse[any]{
+		Success: true,
+		Message: "Data berhasil disimpan",
+	})
+}
+
+// delete godoc
+//
+//	@Summary Delete a publisher
+//	@Description Delete a publisher.
+//	@Produce json
+//	@Security BearerAuth
+//	@Param id path int true "Publisher's ID"
+//	@Success 200 {object} dto.SuccessResponse[any]
+//	@Failure 400 {object} dto.ErrorResponse
+//	@Failure 401 {object} dto.ErrorResponse
+//	@Failure 403 {object} dto.ErrorResponse
+//	@Failure 404 {object} dto.ErrorResponse
+//	@Failure 500 {object} dto.ErrorResponse
+//	@Router /publishers/{id} [delete]
+func (h *PublisherHandle) delete(c *gin.Context) {
+	idStr := c.Param("id")
+
+	id, err := strconv.ParseUint(idStr, 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, h.hr.ErrorResponse("ID tidak valid"))
+		return
+	}
+
+	err = h.service.Delete(uint(id))
+	if err != nil {
+		h.hr.ErrorInternalServer(c, err)
+		return
+	}
+
+	c.JSON(http.StatusOK, dto.SuccessResponse[any]{
+		Success: true,
+		Message: "Data berhasil dihapus",
 	})
 }
